@@ -4,6 +4,9 @@ software-center (1.1.21) UNRELEASED; urgency=low
     many thanks
   * softwarecenter/view/catview.py:
     - fix icon size in sub-categories to match icon theme size
+  * softwarecenter/view/catview.py:
+    - fix another i18n issue with the translated categories,
+      thanks to Ricardo Pérez López for noticing it (LP: #545102)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 25 Mar 2010 20:45:35 +0100
 
